--- a/XmlXslxProject.UI/XmlXslxProject.UI.csproj
+++ b/XmlXslxProject.UI/XmlXslxProject.UI.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\XmlXlsxProject.BusinessLogic.Interfaces\XmlXlsxProject.BusinessLogic.Interfaces.csproj" />
     <ProjectReference Include="..\XmlXlsxProject.BusinessLogic\XmlXlsxProject.BusinessLogic.csproj" />
     <ProjectReference Include="..\XmlXlsxProject.Models\XmlXlsxProject.Models.csproj" />
